# Ternary_inference

./: .gitignore  FAQ.md  PAPER.md  README.md  REDDIT_POST.md  benchmark_multimodel.py  demo_epistemic.py  demo_ollama.py  demo_quick_ollama.py  demo_reddit.py  real_inference.py  run_ollama_ternary.py  simulate_large.py
benchmark/: RESULTS.md  comprehensive_benchmark.py  hallucination_benchmark.py  hardware_simulation.py  llama_benchmark.py  quality_benchmark.py  run_all_benchmarks.py  rust_benchmark.py  scalable_benchmark.py  scaling_benchmark.py  speed_benchmark.py  stress_test.py  truthfulqa_benchmark.py  ultimate_test.py
model/: direct_ternary.py  gguf_dequant.py  llama_ternary.py  ollama_loader.py  scalable_ternary.py  ternary_transformer.py
output/: Balanced_Ternary_Transformers.docx  ~$lanced_Ternary_Transformers.docx
paper/: Balanced_Ternary_Transformers.docx  PAPER.docx  PAPER.md
ternary-core/: Cargo.toml
ternary-core/src/: lib.rs
