[package]
name = "ternary-core"
version = "0.1.0"
edition = "2021"
authors = ["Zane Hambly"]
description = "High-performance ternary inference engine with SIMD"
license = "MIT"

[lib]
name = "ternary_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }

# SIMD and parallelism
rayon = "1.8"
num_cpus = "1.16"

# Memory-mapped files
memmap2 = "0.9"

# Serialisation
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release-with-debug]
inherits = "release"
debug = true

